backend/apps/entryou/k8s/apps/entryou-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entryou-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: entryou-oauth2-svc
                port:
                  number: 80
